--- a/index.html
+++ b/index.html
@@ -11,25 +11,18 @@
         font-family: 'Inter', sans-serif;
       }
       @keyframes draw-check {
-        from {
-          stroke-dashoffset: 25;
-        }
-        to {
-          stroke-dashoffset: 0;
-        }
+        from { stroke-dashoffset: 25; }
+        to { stroke-dashoffset: 0; }
       }
-
       .checkmark-path {
         stroke-dasharray: 25;
         stroke-dashoffset: 25;
         animation: draw-check 0.3s cubic-bezier(0.68, -0.55, 0.27, 1.55) forwards;
       }
-
       @keyframes celebrate-bg {
         0% { background-position: 200% 0; }
         100% { background-position: -200% 0; }
       }
-
       .animate-celebrate {
         background-image: linear-gradient(
           90deg,
@@ -43,20 +36,21 @@
         animation: celebrate-bg 1.5s ease-in-out forwards;
       }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0",
-    "vite": "https://aistudiocdn.com/vite@^7.1.12",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
-    "uuid": "https://aistudiocdn.com/uuid@^13.0.0"
-  }
-}
-</script>
-</head>
+
+    <script type="importmap">
+      {
+        "imports": {
+          "react/": "https://aistudiocdn.com/react@^19.2.0/",
+          "react": "https://aistudiocdn.com/react@^19.2.0",
+          "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+          "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0",
+          "vite": "https://aistudiocdn.com/vite@^7.1.12",
+          "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
+          "uuid": "https://aistudiocdn.com/uuid@^13.0.0"
+        }
+      }
+    </script>
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
