--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ADHD Focus Flow</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
     <!-- Google Font -->
     <link
